--- a/Páginas do site/Página Receitas/REFEIÇÕES/Almoço/index.html
+++ b/Páginas do site/Página Receitas/REFEIÇÕES/Almoço/index.html
@@ -61,37 +61,37 @@
                 <div class="spaceBoxDest">
                     <div id="DestaqueMaior">
                         <div class="imgDestMaior">
-                            <a href="#"><img src="Imagens/Frango grelhado.jpg"></a>
+                            <a href="Receitas/Frango grelhado/index.html"><img src="Imagens/Frango grelhado.jpg"></a>
                         </div>
                         <div class="nomeDest">
-                            <h3><a href="#">FRANGO GRELHADO</a></h3>
+                            <h3><a href="Receitas/Frango grelhado/index.html">FRANGO GRELHADO</a></h3>
                         </div>
                     </div>
 
                     <div id="DestaqueMaior">
                         <div class="imgDestMaior">
-                            <a href="#"><img src="Imagens/frango-xadrez.jpeg.png"></a>
+                            <a href="Receitas/Frango xadrez/index.html"><img src="Imagens/frango-xadrez.jpeg.png"></a>
                         </div>
                         <div class="nomeDest">
-                            <h3><a href="#">FRANGO XADREZ</a></h3>
+                            <h3><a href="Receitas/Frango xadrez/index.html">FRANGO XADREZ</a></h3>
                         </div>
                     </div>
 
                     <div id="DestaqueMaior">
                         <div class="imgDestMaior">
-                            <a href="#"><img src="Imagens/Espaguete-a-carbonara-receita.webp"></a>
+                            <a href="Receitas/Espaguete carbonara/index.html"><img src="Imagens/Espaguete-a-carbonara-receita.webp"></a>
                         </div>
                         <div class="nomeDest">
-                            <h3><a href="#">ESPAGUETE CARBONARA</a></h3>
+                            <h3><a href="Receitas/Espaguete carbonara/index.html">ESPAGUETE CARBONARA</a></h3>
                         </div>
                     </div>
 
                     <div id="DestaqueMaior">
                         <div class="imgDestMaior">
-                            <a href="#"><img src="Imagens/Omelete.jpg"></a>
+                            <a href="Receitas/Omelete/index.html"><img src="Imagens/Omelete.jpg"></a>
                         </div>
                         <div class="nomeDest">
-                            <h3><a href="#">OMELETE</a></h3>
+                            <h3><a href="Receitas/Omelete/index.html">OMELETE</a></h3>
                         </div>
                     </div>
 
@@ -134,7 +134,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Arroz com legumes.jpg"></a>
+                            <a href="Receitas/Arroz com legumes/index.html"><img src="Imagens/Arroz com legumes.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -144,7 +144,7 @@
                             </div>
                             <p id="prato">Arroz com legumes</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Arroz com legumes/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -153,7 +153,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Macarrao-com-molho-de-tomate.jpg"></a>
+                            <a href="Receitas/Macarrão/index.html"><img src="Imagens/Macarrao-com-molho-de-tomate.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -163,7 +163,7 @@
                             </div>
                             <p id="prato">Macarrão</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Macarrão/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -172,7 +172,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Omelete.jpg"></a>
+                            <a href="Receitas/Omelete/index.html"><img src="Imagens/Omelete.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -182,7 +182,7 @@
                             </div>
                             <p id="prato">Omelete</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Omelete/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -191,7 +191,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Salada-com-Frango-Desfiado.jpg"></a>
+                            <a href="Receitas/Saladade frango/index.html"><img src="Imagens/Salada-com-Frango-Desfiado.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -201,7 +201,7 @@
                             </div>
                             <p id="prato">Salada de frango</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Saladade frango/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -213,7 +213,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/sopa de legumes.jpg"></a>
+                            <a href="Receitas/Sopa de legumes/index.html"><img src="Imagens/sopa de legumes.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -223,7 +223,7 @@
                             </div>
                             <p id="prato">Sopa de legumes</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Sopa de legumes/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -232,7 +232,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Frango grelhado.jpg"></a>
+                            <a href="Receitas/Frango grelhado/index.html"><img src="Imagens/Frango grelhado.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -242,7 +242,7 @@
                             </div>
                             <p id="prato">Frango grelhado</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Frango grelhado/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -251,7 +251,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Espaguete-a-carbonara-receita.webp"></a>
+                            <a href="Receitas/Espaguete carbonara/index.html"><img src="Imagens/Espaguete-a-carbonara-receita.webp"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -261,7 +261,7 @@
                             </div>
                             <p id="prato">Espaguete carbonara</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Espaguete carbonara/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -270,7 +270,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/Tacos-de-carne-moida.webp"></a>
+                            <a href="Receitas/Tacos/index.html"><img src="Imagens/Tacos-de-carne-moida.webp"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -281,7 +281,7 @@
                             <p id="prato">Tacos de carne moída
                             </p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Tacos/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -293,7 +293,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/salada_de_massa.jpg"></a>
+                            <a href="Receitas/Salada de massa/index.html"><img src="Imagens/salada_de_massa.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -303,7 +303,7 @@
                             </div>
                             <p id="prato">Salada de massa</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Salada de massa/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -312,7 +312,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/frango-assado.jpg"></a>
+                            <a href="Receitas/Frango assado/index.html"><img src="Imagens/frango-assado.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -322,7 +322,7 @@
                             </div>
                             <p id="prato">Frango assado</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Frango assado/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -331,7 +331,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/ravioli-ao-molho-branco.jpg"></a>
+                            <a href="Receitas/Ravioli/index.html"><img src="Imagens/ravioli-ao-molho-branco.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -341,7 +341,7 @@
                             </div>
                             <p id="prato">Ravioli com molho branco</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Ravioli/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -350,7 +350,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/salmao-grelhado-com-oregaos.jpg"></a>
+                            <a href="Receitas/Salmão grelhado/index.html"><img src="Imagens/salmao-grelhado-com-oregaos.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -360,7 +360,7 @@
                             </div>
                             <p id="prato">Salmão grelhado</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Salmão grelhado/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -372,7 +372,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/penne_rigattii.jpg"></a>
+                            <a href="Receitas/Penne/index.html"><img src="Imagens/penne_rigattii.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -382,7 +382,7 @@
                             </div>
                             <p id="prato">Penne</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Penne/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -391,7 +391,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/frango-xadrez.jpeg.png"></a>
+                            <a href="Receitas/Frango xadrez/index.html"><img src="Imagens/frango-xadrez.jpeg.png"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -401,7 +401,7 @@
                             </div>
                             <p id="prato">Frango xadrez</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Frango xadrez/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -410,7 +410,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/receitas-de-fraldinha-na-panela-de-pressao.png"></a>
+                            <a href="Receitas/Fraldinha/index.html"><img src="Imagens/receitas-de-fraldinha-na-panela-de-pressao.png"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -420,7 +420,7 @@
                             </div>
                             <p id="prato">Fraldinha de panela</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/Fraldinha/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
@@ -429,7 +429,7 @@
 
                     <div class="caixa-receitas">
                         <div class="img-receitas">
-                            <a href="#"><img src="Imagens/File de fangoo.jpg"></a>
+                            <a href="Receitas/File de frango/index.html"><img src="Imagens/File de fangoo.jpg"></a>
                         </div>
                         <div class="info-receitas">
                             <div class="caract-receita">
@@ -439,7 +439,7 @@
                             </div>
                             <p id="prato">File de frango</p>
                             <div class="ver-mais">
-                                <a href="#">
+                                <a href="Receitas/File de frango/index.html">
                                     <p>Ver Receita</p>
                                 </a>
                             </div>
